h2 tag is added

--- a/p1.html
+++ b/p1.html
@@ -12,6 +12,9 @@
                         <h1>
                                 something changes.
                         </h1>
+                        <h2>
+                                this is all about h2.
+                        </h2>
                 </div>
         </body>
 </html>
